; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_IjkMediaPlayer_setFrameAtTime.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_IjkMediaPlayer_setFrameAtTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8* (%struct.TYPE_7__**, i8*, i32*)*, i32 (%struct.TYPE_7__**, i8*, i8*)* }

@.str = private unnamed_addr constant [35 x i8] c"java/lang/IllegalArgumentException\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"mpjni: setFrameAtTime: null path\00", align 1
@LABEL_RETURN = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [32 x i8] c"java/lang/IllegalStateException\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"mpjni: setFrameAtTime: null mp\00", align 1
@.str.4 = private unnamed_addr constant [27 x i8] c"java/lang/OutOfMemoryError\00", align 1
@.str.5 = private unnamed_addr constant [39 x i8] c"mpjni: setFrameAtTime: path.string oom\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"setFrameAtTime: path %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__**, i32, i8*, i32, i32, i32, i32)* @IjkMediaPlayer_setFrameAtTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @IjkMediaPlayer_setFrameAtTime(%struct.TYPE_7__** %0, i32 %1, i8* %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_7__**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  store %struct.TYPE_7__** %0, %struct.TYPE_7__*** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = call i8* @jni_get_media_player(%struct.TYPE_7__** %17, i32 %18)
  store i8* %19, i8** %15, align 8
  store i8* null, i8** %16, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %22 = load i32, i32* @LABEL_RETURN, align 4
  %23 = call i32 @JNI_CHECK_GOTO(i8* %20, %struct.TYPE_7__** %21, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i32 %22)
  %24 = load i8*, i8** %15, align 8
  %25 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %26 = load i32, i32* @LABEL_RETURN, align 4
  %27 = call i32 @JNI_CHECK_GOTO(i8* %24, %struct.TYPE_7__** %25, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i32 %26)
  %28 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i8* (%struct.TYPE_7__**, i8*, i32*)*, i8* (%struct.TYPE_7__**, i8*, i32*)** %30, align 8
  %32 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %33 = load i8*, i8** %10, align 8
  %34 = call i8* %31(%struct.TYPE_7__** %32, i8* %33, i32* null)
  store i8* %34, i8** %16, align 8
  %35 = load i8*, i8** %16, align 8
  %36 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %37 = load i32, i32* @LABEL_RETURN, align 4
  %38 = call i32 @JNI_CHECK_GOTO(i8* %35, %struct.TYPE_7__** %36, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.5, i64 0, i64 0), i32 %37)
  %39 = load i8*, i8** %16, align 8
  %40 = call i32 @ALOGV(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0), i8* %39)
  %41 = load i8*, i8** %15, align 8
  %42 = load i8*, i8** %16, align 8
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %12, align 4
  %45 = load i32, i32* %13, align 4
  %46 = load i32, i32* %14, align 4
  %47 = call i32 @ijkmp_set_frame_at_time(i8* %41, i8* %42, i32 %43, i32 %44, i32 %45, i32 %46)
  %48 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %49 = load %struct.TYPE_7__*, %struct.TYPE_7__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %49, i32 0, i32 1
  %51 = load i32 (%struct.TYPE_7__**, i8*, i8*)*, i32 (%struct.TYPE_7__**, i8*, i8*)** %50, align 8
  %52 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %8, align 8
  %53 = load i8*, i8** %10, align 8
  %54 = load i8*, i8** %16, align 8
  %55 = call i32 %51(%struct.TYPE_7__** %52, i8* %53, i8* %54)
  br label %56

56:                                               ; preds = %7
  %57 = call i32 @ijkmp_dec_ref_p(i8** %15)
  ret void
}

declare dso_local i8* @jni_get_media_player(%struct.TYPE_7__**, i32) #1

declare dso_local i32 @JNI_CHECK_GOTO(i8*, %struct.TYPE_7__**, i8*, i8*, i32) #1

declare dso_local i32 @ALOGV(i8*, i8*) #1

declare dso_local i32 @ijkmp_set_frame_at_time(i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @ijkmp_dec_ref_p(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
